RESOLVED FIXED26190
Null dereference when hidding -webkit-media-*.
https://bugs.webkit.org/show_bug.cgi?id=26190
Summary Null dereference when hidding -webkit-media-*.
Pierre d'Herbemont
Reported 2009-06-04 10:38:33 PDT
STEPS: - dropping a <video> part - adding this css: video::-webkit-media-controls-panel{ display:none } <rdar://problem/6941889>
Attachments
patch v1. (3.58 KB, patch)
2009-06-04 12:38 PDT, Pierre d'Herbemont
eric: review+
Pierre d'Herbemont
Comment 1 2009-06-04 12:38:34 PDT
Created attachment 30954 [details] patch v1. Patch + Test attached.
Eric Seidel (no email)
Comment 2 2009-06-04 20:19:16 PDT
Comment on attachment 30954 [details] patch v1. The test case is kinda strangely out-of-style for LayoutTests. But it's fine and the patch is fine.
Pierre d'Herbemont
Comment 3 2009-06-05 14:44:30 PDT
Eric - I can update the out-of-style test. But I have no idea what does out-of-style mean :) If you have any pointers...
Brent Fulgham
Comment 4 2009-06-09 15:43:56 PDT
Landed in @r44546. Corrected use of tabs (FORBIDDEN!) in test file.
Note You need to log in before you can comment on or make changes to this bug.