WebCore:

2009-06-09  Pierre d'Herbemont  <pdherbemont@apple.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=26190

        Test: media/controls-css-overload.html

        * rendering/RenderMedia.cpp:
        (WebCore::RenderMedia::updateControls): Prevent NULL dereference in case containers gets hidden.

LayoutTests:

2009-06-09  Pierre d'Herbemont  <pdherbemont@apple.com>

        Reviewed by Eric Seidel.

        Test case on internal -webkit-media overload.

        https://bugs.webkit.org/show_bug.cgi?id=26190

        * media/controls-css-overload-expected.txt: Added.
        * media/controls-css-overload.html: Added.



Canonical link: https://commits.webkit.org/36371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44546 268f45cc-cd09-0410-ab3c-d52691b4dbfc